--- a/assets/css/x-boka.css
+++ b/assets/css/x-boka.css
@@ -1,17 +1,17 @@
-.bringback-text-gradient .elementor-heading-title {
+.boka-text-gradient .elementor-heading-title {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-.bringback-icon-gradient .elementor-icon i{
+.boka-icon-gradient .elementor-icon i{
   -webkit-background-clip: text;
   -moz-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-.bringback-icon-gradient .elementor-icon i:before{
+.boka-icon-gradient .elementor-icon i:before{
   position: initial;
 }
-.bringback-sticky-header.sticky-on {
+.boka-sticky-header.sticky-on {
     top: 0;
     width: 100% !important;
     z-index: 20;
@@ -23,7 +23,7 @@
     transition: 0.3s all ease-in-out;
     box-shadow: 0 3px 18px rgba(2, 21, 78, 0.09);
 }
-.bringback-button-after .elementor-button {
+.boka-button-after .elementor-button {
     position: relative;
     -webkit-transition: all 0.5s linear;
     transition: all 0.5s linear;
@@ -31,7 +31,7 @@
     -webkit-animation: btnanimation 1s infinite linear;
     animation: btnanimation 1s infinite linear;
 }
-.bringback-button-after .elementor-button:after {
+.boka-button-after .elementor-button:after {
     position: absolute;
     content: " ";
     width: 100%;
@@ -48,7 +48,7 @@
     transform-origin: top;
     opacity: 0;
 }
-.bringback-button-after .elementor-button:hover::after {
+.boka-button-after .elementor-button:hover::after {
     opacity: 1;
     -webkit-transform: scaleX(1);
     transform: scaleX(1);
